--- a/.github/workflows/api-pr-review.yml
+++ b/.github/workflows/api-pr-review.yml
@@ -69,12 +69,12 @@ jobs:
                 "summary": "✅ Overall, the code is well-structured. ⚠️ Some minor improvements are suggested.",
                 "comments": [
                   {
-                    "file": "../../src/components/Button.tsx",
+                    "file": "components/Button.tsx",
                     "line": 1,
                     "comment": "⚠️ **Missing prop types or TypeScript typings** – Consider explicitly defining the prop types for better type safety.\n\n💡 Suggested change:\n```tsx\ninterface ButtonProps {\n  label: string;\n  onClick: () => void;\n}\n\nconst Button: React.FC<ButtonProps> = ({ label, onClick }) => {\n  return <button onClick={onClick}>{label}</button>;\n};\n```"
                   },
                   {
-                    "file": "../../src/helpers.ts",
+                    "file": "utils/helpers.ts",
                     "line": 1,
                     "comment": "⚠️ **Implicit `any` type** – The `date` parameter should have an explicit type annotation to prevent runtime errors.\n\n💡 Suggested change:\n```ts\nexport const formatDate = (date: string | number | Date): string => {\n  return new Date(date).toLocaleDateString();\n};\n```"
                   }
@@ -94,4 +94,4 @@ jobs:
           message: |
             **🤖 AI Code Review:**
             ${{ steps.ai_review.outputs.review }}
-          GITHUB_TOKEN: ${{ secrets.OPENAI_API_KEY }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
