--- a/.github/workflows/api-pr-review.yml
+++ b/.github/workflows/api-pr-review.yml
@@ -39,12 +39,12 @@ jobs:
               "summary": "✅ Overall, the code is well-structured. ⚠️ Some minor improvements are suggested.",
               "comments": [
                   {
-                    "file": "components/Button.tsx",
+                    "file": "src/components/Button.tsx",
                     "line": 1,
                     "comment": "⚠️ **Missing prop types or TypeScript typings** – Consider explicitly defining the prop types for better type safety.\n\n💡 Suggested change:\n```tsx\ninterface ButtonProps {\n  label: string;\n  onClick: () => void;\n}\n\nconst Button: React.FC<ButtonProps> = ({ label, onClick }) => {\n  return <button onClick={onClick}>{label}</button>;\n};\n```"
                   },
                   {
-                    "file": "helpers.ts",
+                    "file": "src/helpers.ts",
                     "line": 1,
                     "comment": "⚠️ **Implicit `any` type** – The `date` parameter should have an explicit type annotation to prevent runtime errors.\n\n💡 Suggested change:\n```ts\nexport const formatDate = (date: string | number | Date): string => {\n  return new Date(date).toLocaleDateString();\n};\n```"
                   }
@@ -63,12 +63,12 @@ jobs:
           REVIEW_INLINE_COMMENT=$(cat <<'EOF'
           [
                   {
-                    "file": "components/Button.tsx",
+                    "file": "src/components/Button.tsx",
                     "line": 1,
                     "comment": "⚠️ **Missing prop types or TypeScript typings** – Consider explicitly defining the prop types for better type safety.\n\n💡 Suggested change:\n```tsx\ninterface ButtonProps {\n  label: string;\n  onClick: () => void;\n}\n\nconst Button: React.FC<ButtonProps> = ({ label, onClick }) => {\n  return <button onClick={onClick}>{label}</button>;\n};\n```"
                   },
                   {
-                    "file": "helpers.ts",
+                    "file": "src/helpers.ts",
                     "line": 1,
                     "comment": "⚠️ **Implicit `any` type** – The `date` parameter should have an explicit type annotation to prevent runtime errors.\n\n💡 Suggested change:\n```ts\nexport const formatDate = (date: string | number | Date): string => {\n  return new Date(date).toLocaleDateString();\n};\n```"
                   }
